fix navigation spacing

--- a/styles/PathfindingVisualizer.scss
+++ b/styles/PathfindingVisualizer.scss
@@ -32,7 +32,7 @@ $dijkstraColor: #4ea8de;
       gap: 2rem;
       justify-content: center;
       align-items: center;
-      margin-right: 14rem;
+      margin-right: 11rem;
 
       .algorithmOptions {
         width: 5rem;
